--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:orientation="vertical"
-    android:id="@+id/">
+    android:id="@+id/MainRelativeLayout">
 
 
     <TextView
@@ -25,7 +25,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:text="@string/editTextBillDefault"
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,7 +47,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/editTextBill"
         android:layout_alignEnd="@+id/editTextBill"
-        android:text="@string/tipDefault" />
+        android:text="@string/tipDefault"
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -64,7 +67,9 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignRight="@+id/editTextTip"
-        android:layout_alignEnd="@+id/editTextTip" />
+        android:layout_alignEnd="@+id/editTextTip"
+        android:inputType="number"/>
+
 
 
 </RelativeLayout>
